kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oni
  labels:
    app: oni
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oni
  template:
    metadata:
      name: oni
      labels:
        app: oni
    spec:
      containers:
        - name: oni
          image: ghcr.io/zgamelogic/oni:master
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 15
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 15
            periodSeconds: 30
      restartPolicy: Always
      imagePullSecrets:
        - name: ghcr-secret
