kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oni
spec:
  selector:
    app: oni
  ports:
    - protocol: TCP
      port: 2006
      targetPort: 2006
      nodePort: 30060
  type: NodePort
